--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Découvrez l'actualité !</h1>
+  <h1 class="title-index">Découvrez l'actualité !</h1>
   <% @posts.each do |post| %>
     <%= link_to post_path(post) do %>
       <div class="post-index">
