--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to "Back to all posts", posts_path %>
-<h1>hi</h1>
+<h1 class="">hi</h1>
 <%= @post.title %>
 <%= @post.content %>
 <em><p class="text-muted">Posté par <%= @post.user.nickname %></p></em>
