--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,13 @@
 @import "avatar";
 @import "navbar";
 @import "post-index";
+@import "banner";
+@import "button";
+@import "commentaires";
 
+body {
+  background-color: white;
+}
 a {
   text-decoration: none;
   color: black;
@@ -11,4 +17,10 @@ a {
     text-decoration: none;
     color: black;
   }
+}
+h1 {
+  margin-top: 1rem;
+}
+.nothing {
+  height: 15px;
 }
