modal show update/destroy

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,8 @@
 @import "banner";
 @import "button";
 @import "commentaires";
+@import "post";
+@import "modal";
 
 body {
   background-color: white;
