--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,6 +5,7 @@
   border-radius: 5px;
   color: white;
   background-color: rgb(72, 114, 9);
+  border: 1px solid rgb(72, 114, 9);
   margin-top: 1rem;
   margin-bottom: 1rem;
   transition: color 0.5s, background-color 0.5s, border 0.5s;
