--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
     <div class="under-post">
       <p class="text-muted"><em>Posté par <%= @post.user.nickname %> le <%= @post.created_at.strftime("%d/%m") %></em></p>
       <div class="links">
-        <% if current_user = @post.user %>
+        <% if current_user == @post.user %>
           <p id="btn" class="pointer">Modifier le post</p>
           <%= link_to "Supprimer le post", post_path, method: "delete", class: "red" %>
         <% end %>
@@ -37,14 +37,14 @@
 
 <div id="myModal" class="modal-edit-post">
   <div class="modal-content-edit-post flex">
-    <div class="form-edit-title flex">
+    <div class="form-post-title flex">
       <h1>Modifier votre post</h1>
       <i class="close far fa-times-circle"></i>
     </div>
     <%= simple_form_for(@post) do |f| %>
-      <%= f.input :title, label: false, placeholder: "Titre" %>
-      <%= f.input :content, label: false, placeholder: "Contenu" %>
-      <%= f.input :url, label: false, placeholder: "Url" %>
+      <%= f.input :title, label: false %>
+      <%= f.input :content, label: false %>
+      <%= f.input :url, label: false %>
       <%= f.submit "Valider", class: "button"%>
     <% end %>
   </div>
