--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/3953481/pexels-photo-3953481.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
   <div class="container">
-    <h1>Webnews vous invite à <strong>découvrir ce qui passionne votre prochain</strong> !</h1>
-    <p>Chacun peut partager le sujet qui lui plaît.</p>
-    <%= link_to "Découvrir maintenant !", posts_path, class: "button" %>
+    <h1 class="space">Webnews vous invite à <strong>découvrir ce qui passionne la communauté</strong> !</h1>
+    <p class="space">Chacun peut partager le sujet qui lui plaît.</p>
+    <div id="space"><%= link_to "Découvrir maintenant !", posts_path, class: "button space" %></div>
   </div>
 </div>
