--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,12 +1,12 @@
 .banner {
   background-size: cover;
   background-position: center;
-  height: 70vh;
+  height: 100vh;
   padding: 150px 0;
 }
 
 .banner h1 {
-  margin: 0;
+  margin: 1rem 1rem;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
@@ -18,4 +18,12 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.space {
+  margin: 1rem 1rem;
+}
+
+#space {
+  margin-top: 2rem;
 }
