--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,10 +5,10 @@
   border-radius: 5px;
   color: white;
   background-color: rgb(72, 114, 9);
-  border: 1px solid rgb(72, 114, 9);
+  border: 1px solid rgb(72, 114, 9) !important;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  transition: color 0.5s, background-color 0.5s, border 0.5s;
+  transition: color 0.5s, background-color 0.5s;
   border-style: none;
   margin-left: 15px;
   &:hover {
@@ -32,4 +32,7 @@
     color: white;
     background-color: rgb(72, 114, 9);
   }
+}
+.margin-left {
+  margin-left: 40px;
 }
