--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,7 +1,7 @@
 .modal-edit-post {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  // z-index: 1; /* Sit on top */
+  z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -19,6 +19,7 @@
   margin: 5% auto;
   padding: 20px;
   width: 50%;
+  height: auto;
   border-radius: 5px;
   flex-direction: column;
   align-items: center;
@@ -36,7 +37,9 @@
     justify-content: space-between;
     margin-bottom: 1rem;
     h1 {
-      color: green;
+      margin-top: 0;
+      margin-left: 10px;
+      color: rgb(72, 114, 9);
       font-weight: bold;
     }
   }
@@ -54,12 +57,23 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
-  position: relative;
-  left: 50%;
 }
 
 .close:hover,
 .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.closenew {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.closenew:hover,
+.closenew:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
