--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title-index">Découvrez l'actualité !</h1>
+  <h1 class="title-index">Toute l'actualité est ici !</h1>
   <% @posts.each do |post| %>
     <%= link_to post_path(post) do %>
       <div class="post-index">
@@ -7,6 +7,8 @@
           <h2><%= post.title %></h2>
           <p class="text-muted"><em>Posté par <%= post.user.nickname %> le <%= post.created_at.strftime("%d/%m") %></em></p>
         </div>
+        <%= post.votes.size %>
+        <%= link_to "+1", post_votes_path(post), method: :post %>
       </div>
     <% end %>
   <% end %>
