composants/views/votes

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -57,6 +57,8 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
+  position: relative;
+  bottom: 55px;
 }
 
 .close:hover,
@@ -70,6 +72,8 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
+  position: relative;
+  bottom: 55px;
 }
 
 .closenew:hover,
